--- a/index.html
+++ b/index.html
@@ -12,18 +12,22 @@
             <div class="nom">
                 <label for="name">Name</label>
                 <input type="text" id="name" placeholder="name...">
+                <p class="msg hidden"></p>
             </div>
             <div class="mail">
                 <label for="email">Mail</label>
                 <input type="mail" id="email" placeholder="email...">
+                <p class="msg hidden"></p>
             </div>
             <div class="password">
                 <label for="password">Password</label>
                 <input type="password" name="" id="password" placeholder="**********">
+                <p class="msg hidden"></p>
             </div>
             <div class="confirmPassword">
                 <label for="confirmPassword">Confirm Password</label>
                 <input type="password" id="confirmPassword" placeholder="**********">
+                <p class="msg hidden"></p>
             </div>
             <div class="btn">
                 <input type="button" value="submit">
