--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 <body>
     <div class="container">
         <form>
-            <div class="nom">
-                <label for="name">Name</label>
+            <div class="nom case">
+                <label for="name">Username</label>
                 <input type="text" id="name" placeholder="name...">
-                <p class="msg hidden"></p>
+                <p class="msg hidden">Must be at least 5 characters</p>
             </div>
-            <div class="mail">
-                <label for="email">Mail</label>
+            <div class="mail case">
+                <label for="email">Email</label>
                 <input type="mail" id="email" placeholder="email...">
-                <p class="msg hidden"></p>
+                <p class="msg hidden">Must be at least 5 characters</p>
             </div>
-            <div class="password">
+            <div class="password case">
                 <label for="password">Password</label>
                 <input type="password" name="" id="password" placeholder="**********">
-                <p class="msg hidden"></p>
+                <p class="msg hidden">Must be at least 5 characters</p>
             </div>
-            <div class="confirmPassword">
+            <div class="confirmPassword case">
                 <label for="confirmPassword">Confirm Password</label>
                 <input type="password" id="confirmPassword" placeholder="**********">
-                <p class="msg hidden"></p>
+                <p class="msg hidden">Must be at least 5 characters</p>
             </div>
             <div class="btn">
-                <input type="button" value="submit">
+                <input class = "button" type="button" value="Submit">
             </div>
         </form>
     </div>
